# 2026sp-420-Maverick

./: .coverage  .gitignore  CLI_DEMO_USAGE.md  CLI_USAGE.md  LICENSE  README.md  coverage.xml  main.py  pyproject.toml  schedules.csv  schedules.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: CODEOWNERS
.github/workflows/: tests.yml
Faculty_Management/: facman.py
app/: DELETE_main_jay.py  __init__.py  config_runtime.py  documentation.txt  local_settings.example.py  local_settings.py  main.py  main_jay.py
app/config_ops/: config_ops.py
app/course_management/: course_management.py
app/faculty_management/: faculty_management.py  faculty_managment.py
app/gui/: __init__.py  main.py
app/gui/controllers/: __init__.py  (+3 more)
app/lab_management/: lab_management.py
app/room_management/: room_management.py
app/schedule_viewing/: schedule_viewing.py
app/scheduler_execution/: scheduler_execution.py
app/web/: README.md  __init__.py  app.py
configs/: config_base.json  config_dev.json  config_test.json  working_config.json
docs/: ai-commands.md
scheduler_core/: main.py  pyproject.toml
scheduler_core/scheduler_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  documentation.txt  documentation_template.txt  test_ai_routes.py  test_ai_service.py  test_ai_tools.py  test_config_routes.py  test_config_service.py  test_course.py  test_faculty.py  test_lab.py  test_openai_client.py  test_room.py  test_run_routes.py  test_run_service.py  test_schedule_service.py  test_viewer_routes.py
tests/web/: test_ai_routes.py
(+35 files in other folders)
