[project]
name = "2026sp-420-maverick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "course-constraint-scheduler>=2.6.1",
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "openai>=2.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
omit = [
    "tests/*",
]

[tool.coverage.xml]
output = "coverage.xml"
